[gd_scene load_steps=67 format=2]

[ext_resource path="res://Tutorial_NPC/tutorial_npc.gd" type="Script" id=1]
[ext_resource path="res://Font/Notepen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PlayerKeyboard/player_shadow.png" type="Texture" id=3]
[ext_resource path="res://NPC/Request.png" type="Texture" id=4]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking6.png" type="Texture" id=5]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking5.png" type="Texture" id=6]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking7.png" type="Texture" id=7]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking4.png" type="Texture" id=8]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking3.png" type="Texture" id=9]
[ext_resource path="res://NPC/Sprites/NPC_01/Idle/NPC_idle2.png" type="Texture" id=10]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking2.png" type="Texture" id=11]
[ext_resource path="res://NPC/Request_outline.png" type="Texture" id=12]
[ext_resource path="res://NPC/Sprites/NPC_01/Idle/NPC_idle1.png" type="Texture" id=13]
[ext_resource path="res://NPC/Sprites/NPC_01/Walking/NPC_walking1.png" type="Texture" id=14]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking6.png" type="Texture" id=15]
[ext_resource path="res://NPC/Sprites/NPC_02/Idle/NPC_idle1.png" type="Texture" id=16]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking2.png" type="Texture" id=17]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking5.png" type="Texture" id=18]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking4.png" type="Texture" id=19]
[ext_resource path="res://NPC/Sprites/NPC_03/Idle/NPC_idle1.png" type="Texture" id=20]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking3.png" type="Texture" id=21]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking7.png" type="Texture" id=22]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking7.png" type="Texture" id=23]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking1.png" type="Texture" id=24]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking6.png" type="Texture" id=25]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking2.png" type="Texture" id=26]
[ext_resource path="res://NPC/Sprites/NPC_02/Walking/NPC_walking1.png" type="Texture" id=27]
[ext_resource path="res://NPC/Sprites/NPC_03/Idle/NPC_idle2.png" type="Texture" id=28]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking3.png" type="Texture" id=29]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking4.png" type="Texture" id=30]
[ext_resource path="res://NPC/Sprites/NPC_03/Walking/NPC_walking5.png" type="Texture" id=31]
[ext_resource path="res://NPC/Sprites/NPC_02/Idle/NPC_idle2.png" type="Texture" id=32]
[ext_resource path="res://NPC/Sprites/NPC_05/Idle/Player_idle2.png" type="Texture" id=33]
[ext_resource path="res://NPC/Sprites/NPC_04/Idle/Player_idle1.png" type="Texture" id=34]
[ext_resource path="res://NPC/Sprites/NPC_04/Idle/Player_idle2.png" type="Texture" id=35]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking1.png" type="Texture" id=36]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking2.png" type="Texture" id=37]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking7.png" type="Texture" id=38]
[ext_resource path="res://NPC/Sprites/NPC_05/Idle/Player_idle1.png" type="Texture" id=39]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking3.png" type="Texture" id=40]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking4.png" type="Texture" id=41]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking5.png" type="Texture" id=42]
[ext_resource path="res://NPC/Sprites/NPC_04/Walking/Player_walking6.png" type="Texture" id=43]
[ext_resource path="res://NPC/Sprites/NPC_06/Idle/Player_idle2.png" type="Texture" id=44]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking7.png" type="Texture" id=45]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking7.png" type="Texture" id=46]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking6.png" type="Texture" id=47]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking3.png" type="Texture" id=48]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking3.png" type="Texture" id=49]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking1.png" type="Texture" id=50]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking2.png" type="Texture" id=51]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking5.png" type="Texture" id=52]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking6.png" type="Texture" id=53]
[ext_resource path="res://NPC/Sprites/NPC_06/Idle/Player_idle1.png" type="Texture" id=54]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking5.png" type="Texture" id=55]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking1.png" type="Texture" id=56]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking4.png" type="Texture" id=57]
[ext_resource path="res://NPC/Sprites/NPC_06/Walking/Player_walking2.png" type="Texture" id=58]
[ext_resource path="res://NPC/Sprites/NPC_05/Walking/Player_walking4.png" type="Texture" id=59]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.49998
height = 11.0

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "NPC_01_idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "NPC_01_walking",
"speed": 8.5
}, {
"frames": [ ExtResource( 16 ), ExtResource( 32 ) ],
"loop": true,
"name": "NPC_02_idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 27 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "NPC_02_walking",
"speed": 8.5
}, {
"frames": [ ExtResource( 20 ), ExtResource( 28 ) ],
"loop": true,
"name": "NPC_03_idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 15 ), ExtResource( 22 ) ],
"loop": true,
"name": "NPC_03_walking",
"speed": 8.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "NPC_04_idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 38 ) ],
"loop": true,
"name": "NPC_04_walking",
"speed": 8.5
}, {
"frames": [ ExtResource( 39 ), ExtResource( 33 ) ],
"loop": true,
"name": "NPC_05_idle",
"speed": 2.5
}, {
"frames": [ ExtResource( 56 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 59 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 46 ) ],
"loop": true,
"name": "NPC_05_walking",
"speed": 8.5
}, {
"frames": [ ExtResource( 54 ), ExtResource( 44 ) ],
"loop": true,
"name": "NPC_06_idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 58 ), ExtResource( 48 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 47 ), ExtResource( 45 ) ],
"loop": true,
"name": "NPC_06_walking",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 3
outline_color = Color( 0.105882, 0.105882, 0.105882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=7]
radius = 26.0192

[node name="Tutorial_NPC" type="KinematicBody2D" groups=["Tutorial-NPC"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.90735e-06, 16.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 8 )
animation = "NPC_06_walking"
frame = 4
playing = true
offset = Vector2( 0, -7 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PlayerShadow" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 16 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Request" type="Node2D" parent="."]
position = Vector2( -51, -4 )

[node name="RequestOutline" type="Sprite" parent="Request"]
position = Vector2( 0, -139 )
scale = Vector2( 5, 5 )
texture = ExtResource( 12 )

[node name="Request" type="Sprite" parent="Request"]
position = Vector2( -3.55271e-15, -139 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="CoffeeType" type="Label" parent="Request"]
margin_left = -35.0
margin_top = -187.0
margin_right = 30.0
margin_bottom = -167.0
custom_fonts/font = SubResource( 3 )
text = "Cappuccino"
align = 1
valign = 1
autowrap = true

[node name="CoffeeSize" type="Label" parent="Request"]
margin_left = -32.0
margin_top = -153.0
margin_right = 27.0
margin_bottom = -114.0
custom_fonts/font = SubResource( 4 )
text = "Size : S"
align = 1
valign = 1
autowrap = true

[node name="Sugar" type="Label" parent="Request"]
margin_left = -43.0
margin_top = -173.0
margin_right = 16.0
margin_bottom = -134.0
custom_fonts/font = SubResource( 5 )
text = "Sugar:"
align = 1
valign = 1
autowrap = true

[node name="CoffeeSugar" type="Label" parent="Request"]
margin_left = -20.0
margin_top = -173.0
margin_right = 46.0
margin_bottom = -133.0
custom_fonts/font = SubResource( 6 )
text = "X"
align = 1
valign = 1
autowrap = true

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2( 0, 16 )
shape = SubResource( 7 )

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_PlayerCheck_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_PlayerCheck_body_exited"]
